--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
 </head>
 <body>
 <nav>
@@ -29,6 +30,11 @@
     </ul>
   </aside>
   <section id="section_1">
+
+  <header>
+    <h1 class="animated shake"> Hello World </h1>
+  </header>
+    
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut magnam exercitationem, tempora dolorem laboriosam dignissimos quia, quaerat quas, vitae, maiores dolor voluptatibus eveniet commodi repellendus neque nemo porro velit. Ex?
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut magnam exercitationem, tempora dolorem laboriosam dignissimos quia, quaerat quas, vitae, maiores dolor voluptatibus eveniet commodi repellendus neque nemo porro velit. Ex?
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut magnam exercitationem, tempora dolorem laboriosam dignissimos quia, quaerat quas, vitae, maiores dolor voluptatibus eveniet commodi repellendus neque nemo porro velit. Ex?
@@ -54,68 +60,4 @@
   </section>
 </div>
 </body>
-
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  padding-top: 61px;
-}
-
-aside a {
-display: inline-block;
-padding: 10px;
-background: grey;
-width: 100%
-margin-bottom:5px;
-text-decoration: none;
-color: #333;
-transition: all is linear;
-position: relative;
-}
-
-aside a:hover
-{background: red;
-margin-left: 10px;
-}
-
-nav {
-  background: #666;
-  padding: 20px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-.container {
-  padding: 40px 0;
-}
-
-section {
-  margin: 20px 0;
-  margin-left: 200px;
-}
-
-aside { 
-  width: 200px;
-  float: left;
-}
-
-aside ul { 
-  padding: 0;
-}
-</style>
-Add Comment Collapse
 
