--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>My super résumé Borur</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
 </head>
@@ -22,7 +22,7 @@
         <a href="#section_1">section_1</a>
       </li>
       <li>
-        <a href="#section_2">section_2</a>
+        <a href="#section_3">section_2</a>
       </li>
       <li>
         <a href="#section_3">section_3</a>
@@ -30,11 +30,11 @@
     </ul>
   </aside>
   <section id="section_1">
-
-  <header>
-    <h1 class="animated shake"> Hello World </h1>
-  </header>
-    
+    <header>
+      <h1 class="animated rotateIn center">
+        Hello world
+      </h1>
+    </header>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut magnam exercitationem, tempora dolorem laboriosam dignissimos quia, quaerat quas, vitae, maiores dolor voluptatibus eveniet commodi repellendus neque nemo porro velit. Ex?
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut magnam exercitationem, tempora dolorem laboriosam dignissimos quia, quaerat quas, vitae, maiores dolor voluptatibus eveniet commodi repellendus neque nemo porro velit. Ex?
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut magnam exercitationem, tempora dolorem laboriosam dignissimos quia, quaerat quas, vitae, maiores dolor voluptatibus eveniet commodi repellendus neque nemo porro velit. Ex?
@@ -60,4 +60,4 @@
   </section>
 </div>
 </body>
-
+</html>
